iptables/rules.v4
# Generated by iptables-save v1.6.1 on Thu Dec 12 15:25:41 2019
*filter
:INPUT ACCEPT [891748:72040148]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [861421:61685386]
:sshguard - [0:0]
-A INPUT -j sshguard
-A INPUT -s 193.191.177.1/32 -p udp -m udp --dport 123 -j DROP
-A INPUT -p tcp -m multiport --dports 25,80,443,587,993,22345 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 192.168.255.0/24 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -j ACCEPT
-A INPUT -s 193.191.177.6/32 -j ACCEPT
-A INPUT -s 193.191.177.1/32 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
COMMIT
# Completed on Thu Dec 12 15:25:41 2019
